--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-RewriteEngine on
+RewriteEngine On
 # RewriteCond %{HTTPS} off - Checks if the connection is of the HTTP request type. When the condition is met, the next line is executed. We only want to redirect HTTP requests. If you omit this condition, you'll get a redirect loop.
 RewriteCond %{HTTPS} !on 
 # This will allow to make requests to files that aren't .php
@@ -11,5 +11,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-l
 # -----------------------------------------------------------
 
-# When you enter an URL, first will load index.php
-RewriteRule ^(.*) $ index.php?url=$1 [L, QSA]
+# When you enter an URL, first will load index.php - PS: ^(.*)$ can't have whitespaces here [L,QSA] nor here
+RewriteRule ^(.*)$ index.php?url=$1 [L,QSA]  
